feat(bill-type): enhance bill type save command with flow and validation
This commit introduces a flow-based approach for the 'bill-type-save' command, improving user experience and data integrity.

- Implemented a component flow for collecting bill type data (name, path, category) using Spring Shell's component flow API.
- Added validation to the BillTypeSaveDto to ensure data consistency and prevent errors.
- Integrated category selection using a single-item selector, dynamically populated with available categories.
- Updated the BillTypeCommand to utilize the new flow and validation mechanisms.
- Created BillTypeSaveFlowParam to encapsulate parameters for the flow.
- Refactored FlowFactory to create BillTypeSaveFlow.
- Added validation annotations to BillTypeSaveDto.